<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kellycheng.wakiebeta.MainActivityFragment">
    <!--tools:showIn="@layout/activity_main">-->


    <ImageView
        android:id="@+id/boy-img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:src="@drawable/boy" />

    <TextView
        android:id="@+id/boy-name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/boy-img"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/name_boy" />

    <TextView
        android:id="@+id/boy-status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/boy-name"
        android:layout_toRightOf="@+id/boy-img"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/status_boy" />


    <ImageView
        android:id="@+id/girl-img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/boy-img"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:src="@drawable/girl" />

    <TextView
        android:id="@+id/girl-name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/girl-img"
        android:layout_toRightOf="@+id/girl-img"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/name_girl" />

    <TextView
        android:id="@+id/girl-status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/girl-name"
        android:layout_toRightOf="@+id/girl-img"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/status_girl" />


</RelativeLayout>
